(qol) Refactored the frontend part of app.
